quick structural addition

--- a/student.ipynb
+++ b/student.ipynb
@@ -78,6 +78,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Data Cleaning process "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
