--- a/student.ipynb
+++ b/student.ipynb
@@ -175,206 +175,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
     "\n",
     "\n",
     "movie_gross = pd.read_csv('zippedData/bom.movie_gross.csv')\n",
     "rt_movie_info = pd.read_csv('zippedData/rt.movie_info.csv')\n",
     "rt_review = pd.read_csv('zippedData/rt.reviews.csv', encoding='unicode_escape')\n",
     "tn_movie_budgets = pd.read_csv('zippedData/tn.movie_budgets.csv')\n",
-    "tmdb_movies = pd.read_csv('zippedData/tmdb.movies.csv', index_col=0)\n",
-    "\n",
-    "\n",
-    "conn = sqlite3.connect('C:/Users/darobles/Desktop/capstone/AIOverlordSupporters/zippedData/im.db')\n",
-    "cur = conn.cursor()\n",
-    "pd.read_sql('''SELECT * FROM SQLITE_MASTER;''', conn)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>movie</th>\n",
-       "      <th>production_budget</th>\n",
-       "      <th>domestic_gross</th>\n",
-       "      <th>worldwide_gross</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Dec 18, 2009</td>\n",
-       "      <td>Avatar</td>\n",
-       "      <td>$425,000,000</td>\n",
-       "      <td>$760,507,625</td>\n",
-       "      <td>$2,776,345,279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>May 20, 2011</td>\n",
-       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
-       "      <td>$410,600,000</td>\n",
-       "      <td>$241,063,875</td>\n",
-       "      <td>$1,045,663,875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Jun 7, 2019</td>\n",
-       "      <td>Dark Phoenix</td>\n",
-       "      <td>$350,000,000</td>\n",
-       "      <td>$42,762,350</td>\n",
-       "      <td>$149,762,350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>May 1, 2015</td>\n",
-       "      <td>Avengers: Age of Ultron</td>\n",
-       "      <td>$330,600,000</td>\n",
-       "      <td>$459,005,868</td>\n",
-       "      <td>$1,403,013,963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Dec 15, 2017</td>\n",
-       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
-       "      <td>$317,000,000</td>\n",
-       "      <td>$620,181,382</td>\n",
-       "      <td>$1,316,721,747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5777</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Dec 31, 2018</td>\n",
-       "      <td>Red 11</td>\n",
-       "      <td>$7,000</td>\n",
-       "      <td>$0</td>\n",
-       "      <td>$0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5778</th>\n",
-       "      <td>79</td>\n",
-       "      <td>Apr 2, 1999</td>\n",
-       "      <td>Following</td>\n",
-       "      <td>$6,000</td>\n",
-       "      <td>$48,482</td>\n",
-       "      <td>$240,495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5779</th>\n",
-       "      <td>80</td>\n",
-       "      <td>Jul 13, 2005</td>\n",
-       "      <td>Return to the Land of Wonders</td>\n",
-       "      <td>$5,000</td>\n",
-       "      <td>$1,338</td>\n",
-       "      <td>$1,338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5780</th>\n",
-       "      <td>81</td>\n",
-       "      <td>Sep 29, 2015</td>\n",
-       "      <td>A Plague So Pleasant</td>\n",
-       "      <td>$1,400</td>\n",
-       "      <td>$0</td>\n",
-       "      <td>$0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5781</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Aug 5, 2005</td>\n",
-       "      <td>My Date With Drew</td>\n",
-       "      <td>$1,100</td>\n",
-       "      <td>$181,041</td>\n",
-       "      <td>$181,041</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5782 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id  release_date                                        movie  \\\n",
-       "0      1  Dec 18, 2009                                       Avatar   \n",
-       "1      2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
-       "2      3   Jun 7, 2019                                 Dark Phoenix   \n",
-       "3      4   May 1, 2015                      Avengers: Age of Ultron   \n",
-       "4      5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
-       "...   ..           ...                                          ...   \n",
-       "5777  78  Dec 31, 2018                                       Red 11   \n",
-       "5778  79   Apr 2, 1999                                    Following   \n",
-       "5779  80  Jul 13, 2005                Return to the Land of Wonders   \n",
-       "5780  81  Sep 29, 2015                         A Plague So Pleasant   \n",
-       "5781  82   Aug 5, 2005                            My Date With Drew   \n",
-       "\n",
-       "     production_budget domestic_gross worldwide_gross  \n",
-       "0         $425,000,000   $760,507,625  $2,776,345,279  \n",
-       "1         $410,600,000   $241,063,875  $1,045,663,875  \n",
-       "2         $350,000,000    $42,762,350    $149,762,350  \n",
-       "3         $330,600,000   $459,005,868  $1,403,013,963  \n",
-       "4         $317,000,000   $620,181,382  $1,316,721,747  \n",
-       "...                ...            ...             ...  \n",
-       "5777            $7,000             $0              $0  \n",
-       "5778            $6,000        $48,482        $240,495  \n",
-       "5779            $5,000         $1,338          $1,338  \n",
-       "5780            $1,400             $0              $0  \n",
-       "5781            $1,100       $181,041        $181,041  \n",
-       "\n",
-       "[5782 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tn_movie_budgets"
+    "tmdb_movies = pd.read_csv('zippedData/tmdb.movies.csv', index_col=0)"
    ]
   },
   {
@@ -957,7 +765,7 @@
     }
    ],
    "source": [
-    "#made copy of df to drop Nan values and do some work\n",
+    "#made copy of df to drop Nan values and generate insights\n",
     "movie_info = rt_movie_info.copy()\n",
     "movie_info"
    ]
@@ -1249,7 +1057,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\darobles\\AppData\\Local\\Temp\\ipykernel_14068\\36927435.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\darobles\\AppData\\Local\\Temp\\ipykernel_12516\\36927435.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1539,7 +1347,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\darobles\\AppData\\Local\\Temp\\ipykernel_14068\\3708461391.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\darobles\\AppData\\Local\\Temp\\ipykernel_12516\\3708461391.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1549,6 +1357,7 @@
     }
    ],
    "source": [
+    "## making it so that we can sort and graph by the budget values\n",
     "movie_info['box_office']=movie_info['box_office'].astype(float)"
    ]
   },
@@ -1558,6 +1367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#a variable for each rating, narrowing down the table to that respective rating\n",
     "R = movie_info[movie_info['rating']=='R']\n",
     "PG = movie_info[movie_info['rating']=='PG']\n",
     "PG13 = movie_info[movie_info['rating']=='PG-13']\n",
@@ -1572,6 +1382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#new variables for the mean and median box office revenue\n",
     "r=R['box_office'].mean()\n",
     "rmed=R['box_office'].median()\n",
     "pg=PG['box_office'].mean()\n",
@@ -1592,6 +1403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#this dictionary containing the mean variables will help with graphing\n",
     "ratings_dict = {'R':r,'PG':pg,'PG-13':pg13,'G':g,'NC-17':nc17,'NR':nr}"
    ]
   },
@@ -1601,12 +1413,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#same as previous dictionary but for median variables\n",
     "ratings_dict_med = {'R':rmed,'PG':pgmed,'PG-13':pg13med,'G':gmed,'NC-17':nc17med,'NR':nrmed}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1428,7 @@
        "Text(0, 0.5, ' Average Revenue (USD)')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1633,6 +1446,7 @@
     }
    ],
    "source": [
+    "#Mean box office revenue by rating\n",
     "fig, ax=plt.subplots()\n",
     "plt.ticklabel_format(style='plain')\n",
     "ax.bar(ratings_dict.keys(),ratings_dict.values() )\n",
@@ -1646,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1469,7 @@
        "Text(0, 0.5, 'Median Revenue (USD)')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1673,6 +1487,7 @@
     }
    ],
    "source": [
+    "#median box office revenue by rating\n",
     "fig, ax=plt.subplots()\n",
     "plt.ticklabel_format(style='plain')\n",
     "ax.bar(ratings_dict_med.keys(),ratings_dict_med.values() )\n",
@@ -1690,6 +1505,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#narrowing down the number of genres to include five main categories, will calculate mean and median revenue with them.\n",
+    "#If we didn't narrow down the genres, there would be dozens of variations of genre categories to keep track of, -\n",
+    "#-which would be almost impossible to graph.\n",
     "action = movie_info[movie_info['genre'].str.contains('Action')]\n",
     "action_rev=action['box_office'].mean()\n",
     "action_med=action['box_office'].median()"
@@ -1750,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1577,7 @@
        "Text(0, 0.5, 'Average Revenue (USD)')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1777,6 +1595,7 @@
     }
    ],
    "source": [
+    "#Very similar process to the ratings graph, the dictionary was used and now we have revenue split up by the genre\n",
     "fig, ax=plt.subplots()\n",
     "plt.ticklabel_format(style='plain')\n",
     "ax.bar(top_genres_rev.keys(),top_genres_rev.values() )\n",
@@ -1801,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1629,7 @@
        "Text(0, 0.5, 'Median Revenue (USD)')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1907,11 +1726,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the population and sample for the T test, which is one-tailed.\n",
     "pop=movie_info['box_office']\n",
-    "com=comedy['box_office']\n",
-    "act=action['box_office']\n",
-    "drm=drama['box_office']\n",
-    "hor=horror['box_office']"
+    "act=action['box_office']"
    ]
   },
   {
@@ -1945,26 +1762,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=-0.1999475067200022, pvalue=0.8416429540851095)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.ttest_ind(com,pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -1980,95 +1777,10 @@
     }
    ],
    "source": [
+    "#with a .05 level of significance, we can reject the null hypothesis that the action genre has no effect on-\n",
+    "#-box office revenue, and conclude that the action genre is associated with an increase in box office revenue.\n",
+    "# P < .05\n",
     "stats.ttest_ind(act,pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ttest_indResult(statistic=-1.8073438196319902, pvalue=0.07152964453222374)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stats.ttest_ind(drm,pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rom' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m stats\u001b[38;5;241m.\u001b[39mttest_ind(\u001b[43mrom\u001b[49m,pop)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rom' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "stats.ttest_ind(rom,pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats.ttest_ind(hor,pop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_movie_info=movie_info.sort_values(by='box_office',ascending=False)\n",
-    "sorted_movie_info.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##part 1 of creating csv out of sql table movie_basics\n",
-    "sql_query = pd.read_sql_query ('''\n",
-    "                               SELECT\n",
-    "                               *\n",
-    "                               FROM movie_basics\n",
-    "                               ''', conn)\n",
-    "sql_query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "##part 2 of creating csv out of sql table movie_basics\n",
-    "basics_df = pd.DataFrame(sql_query, columns = ['movie_id', 'primary_title', 'original_title','start_year','runtime_minutes','genres'])\n",
-    "basics_df"
    ]
   },
   {
