--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By calculating averages and medians for each of the MPAA ratings, this provides us with the best MPAA rating in regards to Box Office Revenue. From these findings, we are able to conclude that films rated PG produce the most Box Office Revenue."
+    "By calculating averages and medians for each of the MPAA ratings, this provides us with the best MPAA rating in regards to Box Office Revenue. From these findings, we are able to conclude that films rated PG-13 produce the most Box Office Revenue."
    ]
   },
   {
